# click-cli-app

./: README.md  pyproject.toml
tests/: test_click_cli_app.py
